--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Demo of Eleventy 3, ESM, and TS/TSX",
   "scripts": {
-    "build": "npx @11ty/eleventy"
+    "build": "tsx node_modules/@11ty/eleventy/cmd.cjs --config=eleventy.config.ts"
   },
   "keywords": [],
   "author": "Paul Everitt <pauleveritt@me.com>",
@@ -13,6 +13,7 @@
     "@11ty/eleventy": "3.0.0-alpha.4"
   },
   "devDependencies": {
-    "prettier": "^3.1.1"
+    "prettier": "^3.1.1",
+    "tsx": "^4.7.0"
   }
 }
