--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@11ty/eleventy": "3.0.0-alpha.4"
+    "@11ty/eleventy": "3.0.0-alpha.4",
+    "jsx-async-runtime": "^0.1.3"
   },
   "devDependencies": {
     "prettier": "^3.1.1",
