--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Demo of Eleventy 3, ESM, and TS/TSX",
   "scripts": {
-    "build": "tsx node_modules/@11ty/eleventy/cmd.cjs --config=eleventy.config.ts"
+    "build": "tsx node_modules/@11ty/eleventy/cmd.cjs --config=eleventy.config.ts",
+    "test": "vitest run"
   },
   "keywords": [],
   "author": "Paul Everitt <pauleveritt@me.com>",
@@ -14,7 +15,13 @@
     "jsx-async-runtime": "^0.1.3"
   },
   "devDependencies": {
+    "vitest": "^1.1.3",
+    "happy-dom": "^13.0.0",
     "prettier": "^3.1.1",
     "tsx": "^4.7.0"
+  },
+  "volta": {
+    "node": "20.10.0",
+    "npm": "10.2.3"
   }
 }
