--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "happy-dom": "^13.0.0",
     "prettier": "^3.1.1",
+    "@testing-library/dom": "^9.3.4",
     "tsx": "^4.7.0",
     "vitest": "^1.1.3"
   },
