--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@11ty/eleventy": "3.0.0-alpha.4",
-    "jsx-async-runtime": "^0.1.3"
+    "@11ty/eleventy": "^3.0.0-alpha.6",
+    "jsx-async-runtime": "^0.1.8"
   },
   "devDependencies": {
-    "happy-dom": "^13.0.0",
-    "prettier": "^3.1.1",
-    "@testing-library/dom": "^9.3.4",
-    "tsx": "^4.7.0",
-    "vitest": "^1.1.3"
+    "happy-dom": "^14.7.1",
+    "prettier": "^3.2.5",
+    "@testing-library/dom": "^10.0.0",
+    "tsx": "^4.7.2",
+    "vitest": "^1.5.0"
   },
   "volta": {
     "node": "20.10.0",
