--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "outDir": "dist",
     "strict": false,
     "jsx": "react-jsx",
-    "jsxImportSource": "jsx-async-runtime"
+    "jsxImportSource": "jsx-async-runtime",
+    "skipLibCheck": true
   },
   "include": ["site", "components", "_layouts"],
   "exclude": ["node_modules", "dist"]
