--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@11ty/eleventy": "^3.0.0-alpha.6",
+    "@11ty/eleventy": "^3.0.0",
     "jsx-async-runtime": "^0.1.8"
   },
   "devDependencies": {
