--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
   "name": "eleventy-tsx",
   "version": "1.0.0",
-  "description": "Demo of Eleventy 3, ESM, TS/TSX, and jsx-async-runtime",
+  "description": "Demo of Eleventy 3, ESM, TS/TSX, jsx-async-runtime, and testing",
   "scripts": {
     "start": "npx @11ty/eleventy --serve --incremental",
     "build": "npx @11ty/eleventy",
     "test": "vitest run"
   },
-  "keywords": [
-    "eleventy-plugin"
-  ],
+  "keywords": [],
   "author": "Paul Everitt <pauleveritt@me.com>",
   "license": "ISC",
   "type": "module",
   "devDependencies": {
-    "@11ty/eleventy": "^3.0.0-beta.1",
-    "jsx-async-runtime": "^0.5.0",
-    "happy-dom": "^15.7.2",
-    "prettier": "^3.3.3",
+    "@11ty/eleventy": "^3.0.1-alpha.5",
     "@testing-library/dom": "^10.4.0",
-    "tsx": "^4.19.0",
-    "vitest": "^2.0.5"
+    "happy-dom": "^17.4.4",
+    "jsx-async-runtime": "^1.0.0",
+    "prettier": "^3.5.3",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.3",
+    "vitest": "^3.0.9"
   },
   "volta": {
-    "node": "20.10.0",
+    "node": "22.14.0",
     "npm": "10.2.3"
   }
 }
