--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,12 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
-    "target": "ESNext",
-    "moduleResolution": "Node",
-    "outDir": "dist",
-    "strict": false,
     "jsx": "react-jsx",
     "jsxImportSource": "jsx-async-runtime",
-    "skipLibCheck": true
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "skipLibCheck": true,
+    "target": "ESNext"
   },
-  "include": ["site", "components", "_layouts"],
+  "include": ["_layouts", "components", "site", "tests"],
   "exclude": ["node_modules", "dist"]
 }
