--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Demo of Eleventy 3, ESM, TS/TSX, jsx-async-runtime, and testing",
   "scripts": {
-    "start": "tsx node_modules/@11ty/eleventy/cmd.cjs --config=eleventy.config.ts --serve --incremental",
-    "build": "tsx node_modules/@11ty/eleventy/cmd.cjs --config=eleventy.config.ts",
+    "build": "npx @11ty/eleventy",
+    "start": "npx @11ty/eleventy --serve --incremental",
     "test": "vitest run"
   },
   "keywords": [],
