--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
-    "@11ty/eleventy": "^3.0.1-alpha.5",
+    "@11ty/eleventy": "^3.0.0",
     "@testing-library/dom": "^10.4.0",
     "happy-dom": "^17.4.4",
     "jsx-async-runtime": "^1.0.0",
